implemented new ui elements and a new theme

--- a/style.css
+++ b/style.css
@@ -1,17 +1,107 @@
+@import url("https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  font-family: "Kufam", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  color: white;
 }
 
 body {
   display: flex;
-  height: 100vh;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  background: url(/background/background.jpg) no-repeat center;
+  background-size: cover;
 }
 
 h1 {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 48px;
+  font-size: 4em;
+  text-shadow: -8px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #a8a8a821;
+  backdrop-filter: blur(30px);
+  padding: 3em;
+  border-radius: 20px;
+  gap: 3em;
+}
+
+.game-log {
+  display: flex;
+  align-items: center;
+  gap: 3em;
+  font-size: 2em;
+}
+
+.player-img {
+  height: 300px;
+  width: 300px;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.game-log > .choice-img {
+  width: 50px;
+  height: 50px;
+}
+
+.game-log p {
+  text-decoration: underline;
+}
+
+.player-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+  font-size: 20px;
+}
+
+.user-input {
+  display: flex;
+  gap: 8em;
+}
+
+.input-button-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 25px;
+  gap: 0.5em;
+  font-weight: 800;
+}
+
+.input-button-wrapper p {
+  color: black;
+}
+
+.rock p {
+  text-shadow: -1px -1px 0 #ef547f, 1px -1px 0 #ef547f, -1px 1px 0 #ef547f,
+    1px 1px 0 #ef547f;
+}
+
+.paper p {
+  text-shadow: -1px -1px 0 #ffdd54, 1px -1px 0 #ffdd54, -1px 1px 0 #ffdd54,
+    1px 1px 0 #ffdd54;
+}
+
+.scissors p {
+  text-shadow: -1px -1px 0 #73dbe1, 1px -1px 0 #73dbe1, -1px 1px 0 #73dbe1,
+    1px 1px 0 #73dbe1;
+}
+
+.user-input img {
+  width: 130px;
+  height: 130px;
 }
