Assigned ID's and new classes to ui elements, added js to handle user input and display it, added computer random input

--- a/style.css
+++ b/style.css
@@ -86,17 +86,17 @@ h1 {
   color: black;
 }
 
-.rock p {
+#rock p {
   text-shadow: -1px -1px 0 #ef547f, 1px -1px 0 #ef547f, -1px 1px 0 #ef547f,
     1px 1px 0 #ef547f;
 }
 
-.paper p {
+#paper p {
   text-shadow: -1px -1px 0 #ffdd54, 1px -1px 0 #ffdd54, -1px 1px 0 #ffdd54,
     1px 1px 0 #ffdd54;
 }
 
-.scissors p {
+#scissors p {
   text-shadow: -1px -1px 0 #73dbe1, 1px -1px 0 #73dbe1, -1px 1px 0 #73dbe1,
     1px 1px 0 #73dbe1;
 }
