--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1 {
 .game-log {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 3em;
   font-size: 2em;
 }
@@ -54,6 +55,11 @@ h1 {
 .game-log > .choice-img {
   width: 50px;
   height: 50px;
+}
+
+.game-log h2 {
+  text-align: center;
+  min-width: 450px;
 }
 
 .game-log p {
