--- a/style.css
+++ b/style.css
@@ -123,3 +123,39 @@ h1 {
   width: 130px;
   height: 130px;
 }
+
+#popup-window {
+  visibility: hidden;
+  position: fixed;
+  z-index: 1;
+  width: 700px;
+  height: 250px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.423) 0 0 30px 10px;
+}
+
+#popup-window button {
+  color: white;
+  font-size: 20px;
+  padding: 10px 50px;
+  background-color: black;
+  border-radius: 10px;
+  border: none;
+}
+
+#popup-window button:hover {
+  box-shadow: rgba(0, 0, 0, 0.515) 4px 4px 10px;
+}
+
+#popup-window button:active {
+  color: black;
+  background-color: white;
+}
